# starfish

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: fastnoise.h  resource.h  sl.h  sl_argb.h  sl_camera.h  sl_context.h  sl_draw.h  sl_framebuffer.h  sl_glext.h  sl_maths.h  sl_primitivebuffer.h  sl_shader.h  sl_texture.h  sl_vertexbuffer.h  starfish.h
src/: main_audio.cpp  main_graphics.cpp  main_networking.cpp  sl_camera.cpp  sl_context.cpp  sl_draw.cpp  sl_fastnoise.cpp  sl_fileio.cpp  sl_fontdata.cpp  sl_framebuffer.cpp  sl_glext.cpp  sl_glstate.cpp  sl_gui.cpp  sl_maths.cpp  sl_object3d.cpp  sl_primitivebuffer.cpp  sl_projection.cpp  sl_shader.cpp  sl_texture.cpp  sl_vertexbuffer.cpp  starfish.aps  starfish.cpp  starfish.rc
win32-build/: CMakeCache.txt  Makefile  cmake_install.cmake
